tests/ui/rfcs/rfc-0000-never_patterns/ICE-133063-never-arm-no-otherwise-block.stderr
error: a never pattern is always unreachable
  --> $DIR/ICE-133063-never-arm-no-otherwise-block.rs:10:31
   |
LL |             (!|!) if false => {}
   |                               ^^ this will never be executed
   |
help: remove this expression
   |
LL -             (!|!) if false => {}
LL +             (!|!) if false =>
   |

error: aborting due to 1 previous error

